# eia-ingest

./: .gitignore  Dockerfile  INGEST_Pdfs.ipynb  README.md  config.py  docker-compose.yml  ingesta_catalogo.py  main.py  pyproject.toml  requirements.txt  scrip_postgreSQL.py
eia_ingest/: __init__.py  __main__.py  api.py  catalog_reader.py  chunking.py  config.py  constants.py  embeddings.py  point_builder.py  qdrant_client.py  scheduler.py  sync.py  worker.py
eia_ingest/readers/: __init__.py  catalog_reader.py  pdf_reader.py  ui_guide_reader.py
tests/: test_readers.py
